--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Leizle Aspili",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.7.0",
     "node": "^12.10.0"
